force-app/main/default/objects/Opportunity_Power_Map__c/Opportunity_Power_Map__c.object-meta.xml
<CustomObject>
    <label>Opportunity Power Map</label>
    <nameField>
        <displayFormat>OP-{000000}</displayFormat>
        <label>Opportunity Power Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Power Map</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>