force-app/main/default/objects/Opportunity_Power_Map__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Support field to retrieve only relevant Contacts in Contact lookup field</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Opportunity_Powermap</relationshipName>
    <type>Lookup</type>
</CustomField>