force-app/main/default/objects/Opportunity_Power_Map__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <description>Support for filter in Contact lookup -&gt; search correct account</description>
    <formula>Opportunity__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountID</label>
    <type>Text</type>
</CustomField>