force-app/main/default/objects/Opportunity_Power_Map__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Add additional comments or description to this relationship, if needed</inlineHelpText>
    <label>Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>