force-app/main/default/objects/Opportunity_Power_Map__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunity Power Map</relationshipLabel>
    <relationshipName>Opportunity_Powermap</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>