force-app/main/default/objects/Opportunity_Power_Map__c/fields/Contact_lkp__c.field-meta.xml
<CustomField>
    <fullName>Contact_lkp__c</fullName>
    <description>Hyperlink field used as link in listviews, to avoid using the record name in the listviews</description>
    <formula>HYPERLINK(&quot;/?sort=&quot; &amp; Contact__r.FirstName &amp; Contact__r.LastName, &quot;&quot;, &apos;_self&apos;) &amp; HYPERLINK( Id , Contact__r.FirstName &amp; &quot; &quot;&amp; Contact__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>