force-app/main/default/objects/Opportunity_Power_Map__c/fields/Contact_Sort__c.field-meta.xml
<CustomField>
    <fullName>Contact_Sort__c</fullName>
    <description>For sorting in listview</description>
    <formula>Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Sort</label>
    <type>Text</type>
</CustomField>