force-app/main/default/objects/Opportunity_Power_Map__c/fields/Influence_Group__c.field-meta.xml
<CustomField>
    <fullName>Influence_Group__c</fullName>
    <description>Deprecated: Was used to separate powermaps in two separate listviews</description>
    <formula>CASE(Role__c , 
						&apos;Budget owner&apos;, &apos;Final decision makers&apos;,
						&apos;Approver&apos;, &apos;Final decision makers&apos;,
						&apos;Signature&apos;, &apos;Final decision makers&apos;,
						&apos;Makes recommendation&apos;,&apos;Recommenders and influencers&apos;,
      &apos;Has influence on decision&apos;,&apos;Recommenders and influencers&apos;,
						&apos;Unknown&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Influence Group</label>
    <type>Text</type>
</CustomField>