force-app/main/default/objects/Opportunity_Power_Map__c/fields/Influence_Owner__c.field-meta.xml
<CustomField>
    <fullName>Influence_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Employee in Sopra Steria who have or should have a relationship to this contact on this specific case</inlineHelpText>
    <label>Influence Owner</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Opportunity Power Map</relationshipLabel>
    <relationshipName>Opportunity_Powermap</relationshipName>
    <type>Lookup</type>
</CustomField>