force-app/main/default/objects/Opportunity_Power_Map__c/fields/Influence_Status__c.field-meta.xml
<CustomField>
    <fullName>Influence_Status__c</fullName>
    <inlineHelpText>Have we had dialogue with this contact, and have we discussed a value proposition related to this specific case?</inlineHelpText>
    <label>Influence Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not connected</fullName>
            </value>
            <value>
                <fullName>Connected - value proposition not discussed</fullName>
            </value>
            <value>
                <fullName>Connected - value proposition discussed</fullName>
            </value>
            <value>
                <fullName>Connected - active</fullName>
                <isActive>false</isActive>
                <label>Connected - active</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>