force-app/main/default/objects/Opportunity_Power_Map__c/fields/NA_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>NA_Contact_Name__c</fullName>
    <formula>HYPERLINK(Id, Contact__r.FirstName &amp; &quot; &quot;&amp; Contact__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NA Contact Name</label>
    <type>Text</type>
</CustomField>