force-app/main/default/objects/Opportunity_Power_Map__c/fields/Preference_on_this_Case__c.field-meta.xml
<CustomField>
    <fullName>Preference_on_this_Case__c</fullName>
    <inlineHelpText>Contact person&apos;s disposition in this case</inlineHelpText>
    <label>Preference on this Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supports us</fullName>
            </value>
            <value>
                <fullName>Indifferent</fullName>
            </value>
            <value>
                <fullName>Supports competition</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>