force-app/main/default/objects/Opportunity_Power_Map__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <inlineHelpText>This contacts role on this specific case</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget owner</fullName>
            </value>
            <value>
                <fullName>Approver</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Makes recommendation</fullName>
            </value>
            <value>
                <fullName>Has influence on decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>